--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles/index.css">
-    <title>GeoAnalyses | Homepage</title>
+    <title>Placeholder | Homepage</title>
 </head>
 
 <body>
     <header>
         <nav class="navbar fixed-top navbar-expand-sm navbar-light bg-light py-3" style="background-color: #0d1117;">
-            <a class="navbar-brand" href="index.html">GeoAnalyses</a>
+            <a class="navbar-brand" href="index.html">Placeholder</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -81,7 +81,7 @@
 
     <div class="jumbotron">
         <h1 class="display-4">Hallo!</h1>
-        <p class="lead">Welkom op de website van GeoAnalyses, de beste methode om jouw wiskunde skills te beoefenen.</p>
+        <p class="lead">Welkom op de website van Placeholder, de beste methode om jouw wiskunde skills te beoefenen.</p>
         <hr class="my-4">
         <p>Klik hier om naar de opdrachten te gaan.</p>
         <a class="btn btn-primary btn-lg" href="./pages/HTML/library.html" role="button">Ga naar</a>
