--- a/pages/HTML/libraryvwo5.html
+++ b/pages/HTML/libraryvwo5.html
@@ -11,13 +11,13 @@
     <!--  -->
 
     <link rel="stylesheet" href="./pages/CSS/index.css">
-    <title>GeoAnalyses | ...</title>
+    <title>Placeholder | ...</title>
 </head>
 
 <body>
     <header>
         <nav class="navbar fixed-top navbar-expand-sm navbar-light bg-light py-3" style="background-color: #0d1117;">
-            <a class="navbar-brand" href="../../index.html">GeoAnalyses</a>
+            <a class="navbar-brand" href="../../index.html">Placeholder</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
