--- a/pages/HTML/library.html
+++ b/pages/HTML/library.html
@@ -9,6 +9,7 @@
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="library.css">
     <title>Placeholder | Library</title>
+    <script src="../JS/functions.js"></script>
 </head>
 
 <body>
@@ -143,20 +144,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
-
-    <script>
-        function start_opgave1() {
-            window.open("opzet_vraag.html", "_self");
-        }
-
-        function start_opgave2() {
-            window.open("opzet_vraag2.html","_self");
-        }
-
-        function start_opgave_raaklijn1() {
-            window.open("raaklijn1.html","_self");
-        }
-    </script>
 </body>
 
 </html>
