--- a/pages/HTML/test.html
+++ b/pages/HTML/test.html
@@ -9,8 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!--  -->
-    <script type="module" src="../JS/test.js"></script>
-    <link rel="stylesheet" href="./pages/CSS/index.css">
+    <link rel="stylesheet" href="../../styles/index.css">
     
     <title>Placeholder | ...</title>
 </head>
@@ -93,6 +92,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
+    <script type="module" src="../JS/test.js"></script>
 </body>
 
 </html>
