--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
  
 
     <div class="jumbotron">
-        <h1 class="display-4">Hallo!</h1>
+        <h1 class="display-4">Hallo <span id="displayFirstName"></span>!</h1>
         <p class="lead">Welkom op de website van Placeholder, de beste methode om jouw wiskunde skills te beoefenen.</p>
         <hr class="my-4">
         <p>Klik hier om naar de opdrachten te gaan.</p>
@@ -138,6 +138,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
+        <script type="module" src="/pages/JS/test.js"></script>
 </body>
 
 </html>
