--- a/index.html
+++ b/index.html
@@ -14,77 +14,178 @@
 <body>
     <header>
         <nav class="navbar fixed-top navbar-expand-sm navbar-light bg-light py-3" style="background-color: #0d1117;">
-            <a class="navbar-brand" href="index.html">Placeholder</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+            <a class="navbar-brand" href="../../index.html">Placeholder</a>
 
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Library
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="./pages/HTML/libraryvwo4.html">Getal en Ruimte VWO 4</a>
-                            <a class="dropdown-item" href="./pages/HTML/libraryvwo5.html">Getal en Ruimte VWO 5</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="./pages/HTML/library.html">Alle opdrachten</a>
-                        </div>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Theorie
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="./pages/HTML/theorievwo4.html">Getal en Ruimte VWO 4</a>
-                            <a class="dropdown-item" href="./pages/HTML/theorievwo5.html">Getal en Ruimte VWO 5</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="./pages/HTML/theorie.html">Alle theorie</a>
-                        </div>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./pages/HTML/hoewerkthet.html">Hoe werkt het?</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./pages/HTML/contact.html">Contact</a>
-                    </li>
-                </ul>
-                <form class="form-inline my-2 my-lg-0 mx-auto">
-                    <input class="form-control mr-sm-2" type="search" placeholder="Search..." aria-label="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</i></button>
-                </form>
-                <div class="btn-group pull-right ml-auto">
-                    <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false">
-                        Login
+
+            <div class="navbar-nav ml-auto">
+                    <div class="btn-group">
+                    <!-- Account Dropdown (shown when logged in) -->
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="accountDropdown"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Account
                     </button>
-                    <div class="dropdown-menu" style="right: 0; left: unset;">
-                        <form class="form-horizontal" method="post" accept-charset="UTF-8">
-                            <input class="form-control login" type="text" name="username" placeholder="Username.."><br>
-                            <input class="form-control login" type="password" name="password"
-                                placeholder="Password.."><br>
-                            <input class="btn btn-primary" type="submit" name="submit" value="Login">
-                        </form>
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="accountDropdown">
+                        <li><span class="dropdown-item">Points: <span id="accountPoints">0</span></span></li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
+                        <li><button id="openAccountModal" class="dropdown-item">Personal details</button></li>
+                        <li><button id="logoutButton" class="dropdown-item">Logout</button></li>
+                    </div>
+                    </div>
+
+                    <!-- Login Button (shown when not logged in) -->
+                    <button id="loginButton" class="btn btn-primary" data-toggle="modal"
+                        data-target="#loginModal">Login</button>
+                    <!-- Login Modal -->
+                    <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel"
+                        aria-hidden="true">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="loginModalLabel">Login</h5>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                                <div class="modal-body">
+                                    <input type="email" id="emailInput" class="form-control mb-3" placeholder="Email">
+                                    <input type="password" id="passwordInput" class="form-control mb-3"
+                                        placeholder="Password">
+                                    <button id="loginSubmitButton" class="btn btn-primary w-100">Login</button>
+                                    <p class="mt-3 text-center">
+                                        Don’t have an account? <a href="#" id="openRegisterModal">Register here</a>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Register Modal -->
+                    <div class="modal fade" id="registerModal" tabindex="-1" aria-labelledby="registerModalLabel"
+                        aria-hidden="true">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="registerModalLabel">Register</h5>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                                <div class="modal-body">
+                                    <input type="text" id="firstNameInput" class="form-control mb-3"
+                                        placeholder="First Name">
+                                    <input type="text" id="lastNameInput" class="form-control mb-3"
+                                        placeholder="Last Name">
+                                    <input type="email" id="registerEmailInput" class="form-control mb-3"
+                                        placeholder="Email">
+                                    <input type="password" id="registerPasswordInput" class="form-control mb-3"
+                                        placeholder="Password">
+                                    <button id="registerSubmitButton" class="btn btn-primary w-100">Register</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Account Modal -->
+                    <div class="modal fade" id="accountModal" tabindex="-1" role="dialog"
+                        aria-labelledby="accountModalLabel" aria-hidden="true">
+                        <div class="modal-dialog modal-lg" role="document">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="accountModalLabel">Account Settings</h5>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                                <div class="modal-body">
+                                    <div class="row">
+                                        <!-- Sidebar Navigation -->
+                                        <div class="col-md-4">
+                                            <div class="list-group">
+                                                <a href="#accountDetails"
+                                                    class="list-group-item list-group-item-action active"
+                                                    data-toggle="list">Account Details</a>
+                                                <a href="#" class="list-group-item list-group-item-action text-danger"
+                                                    id="logoutButton2">Logout</a>
+                                            </div>
+                                        </div>
+                                        <!-- Main Content Area -->
+                                        <div class="col-md-8">
+                                            <div class="tab-content">
+                                                <!-- Account Details Section -->
+                                                <div class="tab-pane fade show active" id="accountDetails">
+                                                    <h3>Account Details</h3>
+
+                                                    <!-- First Name and Last Name Update Form -->
+                                                    <form id="nameForm">
+                                                        <div class="form-group">
+                                                            <label for="firstName">First Name</label>
+                                                            <input type="text" class="form-control" id="firstName"
+                                                                placeholder="Enter first name">
+                                                        </div>
+                                                        <div class="form-group">
+                                                            <label for="lastName">Last Name</label>
+                                                            <input type="text" class="form-control" id="lastName"
+                                                                placeholder="Enter last name">
+                                                        </div>
+                                                        <button type="submit" class="btn btn-primary">Save Name
+                                                            Changes</button>
+                                                    </form>
+
+                                                    <hr>
+
+                                                    <!-- Password Update Form -->
+                                                    <form id="passwordForm">
+                                                        <h5>Change Password</h5>
+                                                        <div class="form-group">
+                                                            <label for="oldPassword">Current Password</label>
+                                                            <input type="password" class="form-control" id="oldPassword"
+                                                                placeholder="Enter current password">
+                                                        </div>
+                                                        <div class="form-group">
+                                                            <label for="newPassword">New Password</label>
+                                                            <input type="password" class="form-control" id="newPassword"
+                                                                placeholder="Enter new password">
+                                                        </div>
+                                                        <div class="form-group">
+                                                            <label for="confirmNewPassword">Confirm New Password</label>
+                                                            <input type="password" class="form-control"
+                                                                id="confirmNewPassword"
+                                                                placeholder="Confirm new password">
+                                                        </div>
+                                                        <button type="submit" class="btn btn-primary">Save Password
+                                                            Changes</button>
+                                                    </form>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="modal-footer">
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
-            </div>
         </nav>
     </header>
+</div>
+
+
+
 
     <br><br><br>
 
+    <div id="snackbar"></div>
  
 
     <div class="jumbotron">
         <h1 class="display-4">Hallo <span id="displayFirstName"></span>!</h1>
         <p class="lead">Welkom op de website van Placeholder, de beste methode om jouw wiskunde skills te beoefenen.</p>
         <hr class="my-4">
-        <p>Klik hier om naar de opdrachten te gaan.</p>
-        <a class="btn btn-primary btn-lg" href="./pages/HTML/library.html" role="button">Ga naar</a>
+        <p id="index-message">Klik hier om in te loggen op de website.</p>
+        <a class="btn btn-primary btn-lg" role="button" id="inloggen" style="color: white;">Inloggen</a>
     </div>
 
     <div id="carouselExampleInterval" class="carousel slide" data-ride="carousel">
@@ -104,7 +205,7 @@
 
     <div class="card-deck">
         <div class="card">
-          <img class="card-img-top" src="..." alt="image">
+          <img class="card-img-top" src="" alt="image">
           <div class="card-body">
             <h5 class="card-title">titel</h5>
             <p class="card-text">beschrijving</p>
@@ -112,7 +213,7 @@
           </div>
         </div>
         <div class="card">
-            <img class="card-img-top" src="..." alt="image">
+            <img class="card-img-top" src="" alt="image">
             <div class="card-body">
               <h5 class="card-title">titel</h5>
               <p class="card-text">beschrijving</p>
@@ -120,7 +221,7 @@
             </div>
           </div>
           <div class="card">
-            <img class="card-img-top" src="..." alt="image">
+            <img class="card-img-top" src="" alt="image">
             <div class="card-body">
               <h5 class="card-title">titel</h5>
               <p class="card-text">beschrijving</p>
@@ -138,7 +239,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
-        <script type="module" src="/pages/JS/test.js"></script>
+        <script type="module" src="/pages/JS/index.js"></script>
 </body>
 
 </html>
