--- a/pages/HTML/test3.html
+++ b/pages/HTML/test3.html
@@ -1,32 +1,106 @@
-<!DOCTYPE html>
-<html lang="en">
+<div class="lesson">
+    <div class="icon">
+        <img src="../../assets/computer.png" alt="Lesson Icon">
+    </div>
+    <div class="content">
+        <h2>Les #1</h2>
+        <p>Deze les gaat over <b>de eenheidscirkel.</b></p>
+        <span>In deze les wordt de eenheidscirkel door</span>
+        <br><span>middel van een interactief plaatje duidelijk gemaakt.</span>
+        <p id="completionMessage" style="display: none;">Congratulations, you have completed the lesson!</p>
+        <button id="lesson-button" class="knop">START</button>
+    </div>
+</div>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Next Question Example</title>
-</head>
+<script type="module">
+    import { getFirestore, doc, getDoc } from "https://www.gstatic.com/firebasejs/10.11.1/firebase-firestore.js";
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.1/firebase-app.js";
+    import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.11.1/firebase-auth.js";
 
-<body>
-    <h2>Current Question: <span id="currentQuestionDisplay">1</span></h2>
+    // Firebase configuration
+    const firebaseConfig = {
+    apiKey: "AIzaSyC0lml6tn9XBBwMXv2ihniRR6G8w89eAp8",
+    authDomain: "pws-onderzoek-48e1c.firebaseapp.com",
+    projectId: "pws-onderzoek-48e1c",
+    storageBucket: "pws-onderzoek-48e1c.appspot.com",
+    messagingSenderId: "509841664982",
+    appId: "1:509841664982:web:b8e77c8fc701ab73895277"
+};
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const db = getFirestore(app);
+    const auth = getAuth(app);
 
-    <button id="nextQuestionButton">Next Question</button>
-<p id="currentQuestionDisplay">Current Question: 1</p>
 
-<button id="markCompletedButton">Mark as Completed</button>
-<p id="lessonStatusDisplay">Lesson Status: Incomplete</p>
+// Automatically get the userId and lessonId
+async function loadLessonProgressAutomatically() {
+    const auth = getAuth();
+    const db = getFirestore();
 
-<p id="completionMessage" style="display: none;">Congratulations, you have completed the lesson!</p>
+    // Get lessonId from URL parameters
 
+    const lessonId = "lessonehc"
 
-    <!-- Firebase SDK -->
+ 
 
-    <script type="module">
-        // Firebase configuration (replace with your actual config values)
-        // Import the functions you need from the SDKs you need
-        
-    </script>
-    <script type="module" src="../JS/test3.js"></script>
-</body>
+    // Wait for the user to be authenticated
+    onAuthStateChanged(auth, async (user) => {
+        if (user) {
+            const userId = user.uid; // Firebase user ID
+            console.log("User ID:", userId);
+            console.log("Lesson ID:", lessonId);
 
-</html>
+            try {
+                const lessonRef = doc(db, 'users', userId, 'lessons', lessonId);
+                const lessonSnap = await getDoc(lessonRef);
+
+                const card = document.querySelector(".lesson");
+
+                if (lessonSnap.exists()) {
+                    const data = lessonSnap.data();
+                    const { current_question, completed } = data;
+
+                    const button = document.getElementById("lesson-button");
+
+                    if (completed) {
+                        button.textContent = "Resultaten";
+                        button.onclick = () => {
+                            window.location.href = `resultaten.html?id=lesson${lessonId}`;
+                        };
+                        // Add "COMPLETED" text to the card
+                        const completedText = document.createElement("span");
+                        completedText.textContent = "COMPLETED";
+                        completedText.style.color = "green";
+                        completedText.style.fontWeight = "bold";
+                        completedText.style.position = "absolute";
+                        completedText.style.top = "10px";
+                        completedText.style.right = "10px";
+                        card.style.position = "relative"; // Ensure card has relative positioning for absolute placement
+                        card.appendChild(completedText);
+                    } else if (current_question > 1) {
+                        button.textContent = "Hervat";
+                        button.onclick = () => {
+                            window.location.href = `test3.html?id=${current_question}`;
+                        };
+                    } else {
+                        button.textContent = "START";
+                        button.onclick = () => {
+                            window.location.href = "test3.html?id=1";
+                        };
+                    }
+                } else {
+                    console.error("Lesson data not found for user:", userId, "and lessonId:", lessonId);
+                }
+            } catch (error) {
+                console.error("Error fetching lesson progress:", error);
+            }
+        } else {
+            console.error("User is not authenticated.");
+        }
+    });
+}
+
+// Call the function
+loadLessonProgressAutomatically();
+
+</script>
